# projet_kit_big_data

./: .coverage  .gitignore  Dockerfile  README.md  __init__.py  conf.py  index.rst  kitbgd.py  main.py  pyproject.toml  requirements.txt  setup.py  task_manager_cli.py  webapp.py
.github/workflows/: Coverage_Analysis.yml  Linting.yml  PEp8_checks_push.yml  Pep08.yml  Pep8_formatting_push.yml  docstr_coverage.yml  python-publish.yml
config/: db_config.py
controller/: task_controller.py
docs/: conf.py  tasklist.rst
docs/_build/doctrees/: environment.pickle  index.doctree  task.doctree  tasklist.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  task.html  tasklist.html
docs/_build/html/_sources/: index.rst.txt  task.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py  model.rst
flagged/: log.csv
model/: task.py  task_model.py  tasklist.py
models/: Task.py  TaskList.py
project_big_data/: pyproject.toml
project_big_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_task.py  test_task_controller.py  test_tasklist.py
todolist/config/: db_config.py
todolist/models/: Loggers.py  Task.py  TaskList.py
todolist/utils/: Loggers.py  exception_perso.py  loggers.py
utils/: exception_perso.py  loggers.py
view/: task_view.py
