[tool.poetry]
name = "project-big-data"
version = "0.1.0"
description = ""
authors = ["Guillaume CAZOTTES <guillaume.cazottes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datetime = "^5.2"
pymongo = "^4.5.0"
logging = "^0.4.9.6"
gradio = "^3.50.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
