[tool.poetry]
name = "PROJET_KIT_BIG_DATA"
version = "1.0.0"
description = "ToDo list du projet kit big data"
authors = ["Guillaume", "Paul", "Aleksander", "Lucas", "Guillaume"]
readme = "README.md"
packages = [
    { include = "../" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
datetime = "^5.2"
uuid = "^1.30"
pymongo = "^4.5.0"
sphinx = "^7.2.6"
pytest = "^7.4.3"
mongomock = "^4.1.2"
numpy = "^1.26.1"
gradio = "^3.50.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
