[tool.poetry]
name = "project-big-data"
version = "0.1.0"
description = ""
authors = ["Guillaume CAZOTTES <guillaume.cazottes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datetime = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
